Fix running parallel