@@ -13,9 +13,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>13</source>
-                    <target>13</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -26,7 +25,6 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>run/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
